--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>Αρχική Σελίδα</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-left">
+            <a href="index.html">
+                <img src="images/logo.png" alt="logo">
+                Στατιστικά Παγκυπρίων
+            </a>
+        </div>
+        <div class="header-right">
+            <div class="home">
+                <a href="index.html">
+                    <img src="images/home.png" alt="home">
+                    Αρχική Σελίδα
+                </a>
+            </div>
+            <div class="about">
+                <a href="about.html">
+                    <img src="images/about.png" alt="login">
+                    Σχετικά
+                </a>
+            </div>
+            <div class="contact">
+                <a href="contact.html">
+                    <img src="images/contact.png" alt="contact">
+                    Επικοινωνήστε μαζί μας
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="main-content">
+        <ul>
+            <li><a href="mean_rank.html">Κατάταξη Υποψηφίων ανά Μέσο Όρο</a></li>
+            <li><a href="#">Μπλα μπλα</a></li>
+            <li><a href="#">Μπλα μπλα</a></li>
+        </ul>
+    </div>
 </body>
 </html>
