Style index.html. Create cards to place links in

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/general-style.css">
+    <link rel="stylesheet" href="css/index-style.css">
     <title>Αρχική Σελίδα</title>
 </head>
 <body>
@@ -37,11 +38,36 @@
         </div>
     </div>
     <div class="main-content">
-        <ul>
-            <li><a href="mean_rank.html">Κατάταξη Υποψηφίων ανά Μέσο Όρο</a></li>
-            <li><a href="#">Μπλα μπλα</a></li>
-            <li><a href="#">Μπλα μπλα</a></li>
-        </ul>
+        <div class="card">
+            <a href="mean_rank.html">
+                <div class="card-title">
+                    Κατάταξη Υποψηφίων ανά Μέσο Όρο
+                </div>
+                <div class="card-content">
+                    Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των εξετάσεων τους.
+                </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="#">
+                <div class="card-title">
+                    Μπλα μπλα
+                </div>
+                <div class="card-content">
+                    Μπλα μπλα μπλα μπλα μπλα
+                </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="#">
+                <div class="card-title">
+                    Μπλα μπλα
+                </div>
+                <div class="card-content">
+                    Μπλα μπλα μπλα μπλα μπλα
+                </div>
+            </a>
+        </div>
     </div>
 </body>
 </html>
