--- a/mean_rank.html
+++ b/mean_rank.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/general-style.css">
     <title>Μέσοι Όροι</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-left">
+            <a href="index.html">
+                <img src="images/logo.png" alt="logo">
+                Στατιστικά Παγκυπρίων
+            </a>
+        </div>
+        <div class="header-right">
+            <div class="home">
+                <a href="index.html">
+                    <img src="images/home.png" alt="home">
+                    Αρχική Σελίδα
+                </a>
+            </div>
+            <div class="about">
+                <a href="about.html">
+                    <img src="images/about.png" alt="login">
+                    Σχετικά
+                </a>
+            </div>
+            <div class="contact">
+                <a href="contact.html">
+                    <img src="images/contact.png" alt="contact">
+                    Επικοινωνήστε μαζί μας
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
