--- a/index.html
+++ b/index.html
@@ -68,6 +68,28 @@
                 </div>
             </a>
         </div>
+
+        <div class="card">
+            <a href="#">
+                <div class="card-title">
+                    Μπλα μπλα
+                </div>
+                <div class="card-content">
+                    Μπλα μπλα μπλα μπλα μπλα
+                </div>
+            </a>
+        </div>
+        
+        <div class="card">
+            <a href="#">
+                <div class="card-title">
+                    Μπλα μπλα
+                </div>
+                <div class="card-content">
+                    Μπλα μπλα μπλα μπλα μπλα
+                </div>
+            </a>
+        </div>
     </div>
 </body>
 </html>
