--- a/mean_rank.html
+++ b/mean_rank.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="#">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general-style.css">
+    <link rel="stylesheet" href="css/table-style.css">
+    <script type="module" src="javascript/parse_json.js"></script>
+    <script src="javascript/populate_table.js" defer></script>
     <title>Μέσοι Όροι</title>
 </head>
 <body>
@@ -34,6 +38,13 @@
                     Επικοινωνήστε μαζί μας
                 </a>
             </div>
+        </div>
+    </div>
+
+    <div class="main-content">
+
+        <div id="mean-table">
+
         </div>
     </div>
 </body>
