Add "back to top" button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general-style.css">
     <link rel="stylesheet" href="css/index-style.css">
+    <script src="javascript/scroll_to_top.js"></script>
     <title>Αρχική Σελίδα</title>
 </head>
 <body>
@@ -91,5 +92,10 @@
             </a>
         </div>
     </div>
+
+
+    <button id="top-button" onclick="topFunction()">
+        <img src="images/top.png" alt="top">
+    </button>
 </body>
 </html>
