--- a/mean_rank.html
+++ b/mean_rank.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/table-style.css">
     <script type="module" src="javascript/parse_json.js"></script>
     <script src="javascript/populate_table.js" defer></script>
+    <script src="javascript/scroll_to_top.js" defer></script>
     <title>Μέσοι Όροι</title>
 </head>
 <body>
@@ -47,5 +48,10 @@
 
         </div>
     </div>
+
+
+    <button id="top-button" onclick="topFunction()">
+        <img src="images/top.png" alt="top">
+    </button>
 </body>
 </html>
