Fix "back to top" button for safari using jquery

--- a/mean_rank.html
+++ b/mean_rank.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <link rel="shortcut icon" href="#">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +51,7 @@
     </div>
 
 
-    <button id="top-button" onclick="topFunction()">
+    <button id="top-button">
         <img src="images/top.png" alt="top">
     </button>
 </body>
