--- a/mean_rank.html
+++ b/mean_rank.html
@@ -11,6 +11,7 @@
     <script type="module" src="javascript/parse_json.js"></script>
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
+    <script src="javascript/filter.js" defer></script>
     <title>Μέσοι Όροι</title>
 </head>
 <body>
@@ -44,6 +45,11 @@
     </div>
 
     <div class="main-content">
+
+        <div id="filter-input">
+            Εισάγετε τον αριθμό υποψηφίου στο πλαίσιο: 
+            <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
+        </div>
 
         <div id="mean-table">
 
