--- a/mean_rank.html
+++ b/mean_rank.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+    <script>
+        $(function(){
+          $("#header").load("header.html"); 
+          $("#mobile-header").load("mobile_header.html");
+          $("#footer").load("footer.html"); 
+        });
+    </script>
+
     <link rel="shortcut icon" href="#">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,34 +24,8 @@
     <title>Μέσοι Όροι</title>
 </head>
 <body>
-    <div class="header">
-        <div class="header-left">
-            <a href="index.html">
-                <img src="images/logo.png" alt="logo">
-                Στατιστικά Παγκυπρίων
-            </a>
-        </div>
-        <div class="header-right">
-            <div class="home">
-                <a href="index.html">
-                    <img src="images/home.png" alt="home">
-                    Αρχική Σελίδα
-                </a>
-            </div>
-            <div class="about">
-                <a href="about.html">
-                    <img src="images/about.png" alt="login">
-                    Σχετικά
-                </a>
-            </div>
-            <div class="contact">
-                <a href="contact.html">
-                    <img src="images/contact.png" alt="contact">
-                    Επικοινωνήστε μαζί μας
-                </a>
-            </div>
-        </div>
-    </div>
+    <div id="header"> </div>
+    <div id="mobile-header"> </div>
 
     <div class="main-content">
 
@@ -60,5 +43,7 @@
     <button id="top-button">
         <img src="images/top.png" alt="top">
     </button>
+
+    <div id="footer"> </div>
 </body>
 </html>
