Make tables responsive

--- a/mean_rank.html
+++ b/mean_rank.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="shortcut icon" href="#">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--- CSS --->
+
+    <link rel="stylesheet" href="css/general-style.css">
+    <link rel="stylesheet" href="css/table-style.css">
+    <link rel = "stylesheet" href = "css/mobile-style.css">
+
+    <!--- JS --->
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 
     <script>
@@ -11,16 +25,12 @@
         });
     </script>
 
-    <link rel="shortcut icon" href="#">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/general-style.css">
-    <link rel="stylesheet" href="css/table-style.css">
     <script type="module" src="javascript/parse_json.js"></script>
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/filter.js" defer></script>
+    <script src="javascript/dropdown.js" async defer></script>
+
     <title>Μέσοι Όροι</title>
 </head>
 <body>
