Make cards pretty in mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="header"> </div>
     <div id="mobile-header"> </div>
 
-    <div class="main-content">
+    <div class="main-content index-main">
         <div class="card">
             <a href="mean_rank.html">
                 <div class="card-title">
