Make header the same for any device

--- a/header.html
+++ b/header.html
@@ -1,29 +1,41 @@
-<div class="header">
-    <div class="header-left">
-        <a href="index.html">
-            <img src="images/logo.png" alt="logo">
-            Στατιστικά Παγκυπρίων
-        </a>
-    </div>
-    <div class="header-right">
-        <div class="home">
+<div class="header dropdown-related">
+    <div class="header-top dropdown-related">
+        <div class="header-left">
             <a href="index.html">
-                <img src="images/home.png" alt="home">
+                <img src="images/logo.png" alt="logo">
+            </a>
+        </div>
+        <div class="dropdown-related header-dropdown">
+            <div class="dropdown-related header-dropdown-button">
+                <img class="dropdown-related" src="images/menu.png" alt="menu">
+            </div>
+        </div>
+    </div>
+
+    <div class="header-dropdown-content dropdown-related">
+        <div class="mobile-home">
+            <a href="index.html">
+                <div class="dropdown-icon">
+                    <img src="images/home.png" alt="home">
+                </div>
                 Αρχική Σελίδα
             </a>
         </div>
-        <div class="about">
+        <div class="mobile-about">
             <a href="about.html">
-                <img src="images/about.png" alt="login">
+                <div class="dropdown-icon">
+                    <img src="images/about.png" alt="login">
+                </div>
                 Σχετικά
             </a>
         </div>
-        <div class="contact">
+        <div class="mobile-contact">
             <a href="contact.html">
-                <img src="images/contact.png" alt="contact">
+                <div class="dropdown-icon">
+                    <img src="images/contact.png" alt="contact">
+                </div>
                 Επικοινωνήστε μαζί μας
             </a>
         </div>
     </div>
 </div>
-
