--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 </head>
 <body>
     <div id="header"> </div>
-    <div id="mobile-header"> </div>
 
     <div class="main-content index-main">
         <div class="card">
@@ -82,5 +81,7 @@
             </a>
         </div>
     </div>
+
+    <div id="footer"> </div>
 </body>
 </html>
