--- a/header.html
+++ b/header.html
@@ -5,6 +5,9 @@
                 <img src="images/logo.png" alt="logo">
             </a>
         </div>
+        <div class="main-title">
+            Στατιστικά Παγκυπρίων Εξετάσεων
+        </div>
         <div class="dropdown-related header-dropdown">
             <div class="dropdown-related header-dropdown-button">
                 <img class="dropdown-related" src="images/menu.png" alt="menu">
@@ -12,13 +15,14 @@
         </div>
     </div>
 
+
     <div class="header-dropdown-content dropdown-related">
         <div class="mobile-home">
             <a href="index.html">
                 <div class="dropdown-icon">
                     <img src="images/home.png" alt="home">
                 </div>
-                Αρχική Σελίδα
+               <div class="dropdown-text"> Αρχική Σελίδα </div>
             </a>
         </div>
         <div class="mobile-about">
@@ -26,7 +30,7 @@
                 <div class="dropdown-icon">
                     <img src="images/about.png" alt="login">
                 </div>
-                Σχετικά
+                <div class="dropdown-text"> Σχετικά </div>
             </a>
         </div>
         <div class="mobile-contact">
@@ -34,7 +38,7 @@
                 <div class="dropdown-icon">
                     <img src="images/contact.png" alt="contact">
                 </div>
-                Επικοινωνήστε μαζί μας
+                <div class="dropdown-text"> Επικοινωνήστε μαζί μας </div>
             </a>
         </div>
     </div>
