--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script>
-        $(function(){
-          $("#header").load("header.html"); 
-          $("#mobile-header").load("mobile_header.html");
-          $("#footer").load("footer.html"); 
-        });
-    </script>
-
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--- CSS --->
 
     <link rel="stylesheet" href="css/general-style.css">
     <link rel="stylesheet" href="css/mobile-style.css">
     <link rel="stylesheet" href="css/index-style.css">
     
+    <!--- JS --->
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script>
+        $(function(){
+          $("#header").load("header.html"); 
+          $("#footer").load("footer.html"); 
+        });
+    </script>
     <script src="javascript/dropdown.js" async defer></script>
 
     <title>Αρχική Σελίδα</title>
@@ -31,20 +31,23 @@
         <div class="card">
             <a href="mean_rank.html">
                 <div class="card-title">
-                    Κατάταξη Υποψηφίων ανά Μέσο Όρο
+                    Κατάταξη ανά Μέσο Όρο
                 </div>
                 <div class="card-content">
                     Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των εξετάσεων τους.
+                    Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου.
                 </div>
             </a>
         </div>
         <div class="card">
-            <a href="#">
+            <a href="rank_by_lesson.html">
                 <div class="card-title">
-                    Μπλα μπλα
+                    Κατάταξη ανά Μάθημα
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα μπλα μπλα
+                    Οι υποψήφιοι κατατάσσονται με βάση τον βαθμό τους σε επιλεγμένο μάθημα.
+                    Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου και επιλογής
+                    μαθήματος.
                 </div>
             </a>
         </div>
