--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -24,23 +24,30 @@
     </script>
     <script type="module" src="javascript/parse_json.js"></script>
     <script src="javascript/populate_table.js" defer></script>
-    <script src="javascript/mean_table.js" defer></script>
+    <script src="javascript/lessons_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
-    <script src="javascript/filter.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/select_lesson.js" defer></script>
 
-    <title>Μέσοι Όροι</title>
+    <title>Κατάταξη Ανά Μάθημα</title>
 </head>
 <body>
     <div id="header"> </div>
 
     <div class="main-content">
 
-        <div id="filter-input">
-            Εισάγετε τον αριθμό υποψηφίου στο πλαίσιο: 
-            <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
-        </div>
+        <div class="filters">
+            <div id="filter-input">
+                Εισάγετε τον αριθμό υποψηφίου στο πλαίσιο: 
+                <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
+            </div>
+            
+            <div id="lesson-filter">
+                Επιλέξτε μάθημα:
+                <select id="lesson-selector" onchange="change_lesson()"></select>
+            </div>
 
+        </div>
         <div id="table">
 
         </div>
