--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             </a>
         </div>
         <div class="card">
-            <a href="#">
+            <a href="minmax.html">
                 <div class="card-title">
-                    Μπλα μπλα
+                    Μέγιστα, Ελάχιστα και Μέσοι ΄Όροι Μάθηματων
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα μπλα μπλα
+                    Μέγιστες και Ελάχιστες Βαθμολογίες και Μέσος Όρος Μάθηματων.
                 </div>
             </a>
         </div>
