Fit wide tables in mobile screens

--- a/minmax.html
+++ b/minmax.html
@@ -10,7 +10,7 @@
     <!--- CSS --->
 
     <link rel="stylesheet" href="css/general-style.css">
-    <link rel="stylesheet" href="css/table-style.css">
+    <link rel="stylesheet" href="css/wide-table-style.css">
     <link rel = "stylesheet" href = "css/mobile-style.css">
 
     <!--- JS --->
