Create seperate lessons json and parse from that

--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -23,7 +23,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script type="module" src="javascript/parse_json.js"></script>
+    <script type="module" src="javascript/parse_lessons_json.js"></script>
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/lessons_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
