--- a/minmax.html
+++ b/minmax.html
@@ -23,7 +23,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script type="module" src="javascript/parse_json.js"></script>
+    <script type="module" src="javascript/parse_raw_json.js"></script>
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/minmax_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
