--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         </div>
 
         <div class="card">
-            <a href="#">
+            <a href="curved.html">
                 <div class="card-title">
-                    Μπλα μπλα
+                    Αναγωγή
                 </div>
                 <div class="card-content">
                     Μπλα μπλα μπλα μπλα μπλα
