Add transition between page change

--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
