--- a/mean_rank.html
+++ b/mean_rank.html
@@ -29,6 +29,7 @@
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/filter.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <title>Μέσοι Όροι</title>
 </head>
