--- a/curved.html
+++ b/curved.html
@@ -31,6 +31,7 @@
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/filter.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <title>Αναγωγή</title>
 </head>
