--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <div class="header dropdown-related">
     <div class="header-top dropdown-related">
         <div class="header-left">
-            <a href="index.html">
+            <span onclick="transitionToPage('index.html')">
                 <img src="images/logo.png" alt="logo">
-            </a>
+            </span>
         </div>
         <div class="main-title">
             Στατιστικά Παγκυπρίων Εξετάσεων
@@ -18,28 +18,28 @@
 
     <div class="header-dropdown-content dropdown-related">
         <div class="mobile-home">
-            <a href="index.html">
+            <span onclick="transitionToPage('index.html')">
                 <div class="dropdown-icon">
                     <img src="images/home.png" alt="home">
                 </div>
                <div class="dropdown-text"> Αρχική Σελίδα </div>
-            </a>
+            </span>
         </div>
-        <div class="mobile-about">
-            <a href="about.html">
+        <div class="mobile-about">     
+            <span onclick="transitionToPage('about.html')">
                 <div class="dropdown-icon">
                     <img src="images/about.png" alt="login">
                 </div>
                 <div class="dropdown-text"> Σχετικά </div>
-            </a>
+            </span>
         </div>
         <div class="mobile-contact">
-            <a href="contact.html">
+            <span onclick="transitionToPage('contact.html')">
                 <div class="dropdown-icon">
                     <img src="images/contact.png" alt="contact">
                 </div>
                 <div class="dropdown-text"> Επικοινωνήστε μαζί μας </div>
-            </a>
+            </span>
         </div>
     </div>
 </div>
