--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         });
     </script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <title>Αρχική Σελίδα</title>
 </head>
@@ -31,7 +32,7 @@
 
     <div class="main-content index-main">
         <div class="card">
-            <a href="mean_rank.html">
+            <span onclick="transitionToPage('mean_rank.html')">
                 <div class="card-title">
                     Κατάταξη ανά Μέσο Όρο
                 </div>
@@ -39,10 +40,10 @@
                     Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των εξετάσεων τους.
                     Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου.
                 </div>
-            </a>
+            </span>
         </div>
         <div class="card">
-            <a href="rank_by_lesson.html">
+            <span onclick="transitionToPage('rank_by_lesson.html')">
                 <div class="card-title">
                     Κατάταξη ανά Μάθημα
                 </div>
@@ -51,28 +52,28 @@
                     Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου και επιλογής
                     μαθήματος.
                 </div>
-            </a>
+            </span>
         </div>
         <div class="card">
-            <a href="minmax.html">
+            <span onclick="transitionToPage('minmax.html')">
                 <div class="card-title">
                     Μέγιστα, Ελάχιστα και Μέσοι ΄Όροι Μάθηματων
                 </div>
                 <div class="card-content">
                     Μέγιστες και Ελάχιστες Βαθμολογίες και Μέσος Όρος Μάθηματων.
                 </div>
-            </a>
+            </span>
         </div>
 
         <div class="card">
-            <a href="curved.html">
+            <span onclick="transitionToPage('curved.html')">
                 <div class="card-title">
                     Αναγωγή
                 </div>
                 <div class="card-content">
                     Μπλα μπλα μπλα μπλα μπλα
                 </div>
-            </a>
+            </span>
         </div>
         
         <div class="card">
