--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -29,6 +29,7 @@
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/select_lesson.js" defer></script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <title>Κατάταξη Ανά Μάθημα</title>
 </head>
