--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         $(function(){
           $("#header").load("header.html"); 
           $("#footer").load("footer.html"); 
+          $("head").prepend("google_tag_manager_head.html");
+          $("body").prepend("google_tag_manager_body.html");
         });
     </script>
     <script src="javascript/dropdown.js" async defer></script>
