--- a/curved.html
+++ b/curved.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WXNF9T9');</script>
+        <!-- End Google Tag Manager -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELZPVD7R09"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ELZPVD7R09');
+    </script>
+
+
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="shortcut icon" href="#">
@@ -23,8 +41,6 @@
         $(function(){
           $("#header").load("header.html");
           $("#footer").load("footer.html"); 
-          $("head").prepend("google_tag_manager_head.html");
-          $("body").prepend("google_tag_manager_body.html");
         });
     </script>
     <script type="module" src="javascript/parse_lessons_json.js"></script>
@@ -38,6 +54,11 @@
     <title>Αναγωγή</title>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXNF9T9"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <div id="header"> </div>
 
     <div class="unblurred-area">
