Change page titles

--- a/curved.html
+++ b/curved.html
@@ -51,7 +51,7 @@
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
-    <title>Αναγωγή</title>
+    <title>Αναγωγή | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
