--- a/minmax.html
+++ b/minmax.html
@@ -49,7 +49,7 @@
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
-    <title>Στατιστικά Μαθημάτων</title>
+    <title>Στατιστικά Μαθημάτων | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
