--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -49,7 +49,7 @@
     <script src="javascript/select_lesson.js" defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
-    <title>Κατάταξη Ανά Μάθημα</title>
+    <title>Κατάταξη Ανά Μάθημα | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
