--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general-style.css">
-    <title>Document</title>
+    <title>Επικοινωνήστε μαζί μας | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
