--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
-    <title>Αρχική Σελίδα</title>
+    <title> Αρχική Σελίδα | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
