--- a/mean_rank.html
+++ b/mean_rank.html
@@ -48,7 +48,7 @@
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
-    <title>Μέσοι Όροι</title>
+    <title> Μέσοι Όροι | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
