Remove .html from links to appear prettier

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div class="header dropdown-related">
     <div class="header-top dropdown-related">
         <div class="header-left">
-            <span onclick="transitionToPage('index.html')">
+            <span onclick="transitionToPage('index')">
                 <img src="images/logo.png" alt="logo">
             </span>
         </div>
@@ -18,7 +18,7 @@
 
     <div class="header-dropdown-content dropdown-related">
         <div class="mobile-home">
-            <span onclick="transitionToPage('index.html')">
+            <span onclick="transitionToPage('index')">
                 <div class="dropdown-icon">
                     <img src="images/home.png" alt="home">
                 </div>
@@ -26,7 +26,7 @@
             </span>
         </div>
         <div class="mobile-about">     
-            <span onclick="transitionToPage('about.html')">
+            <span onclick="transitionToPage('about')">
                 <div class="dropdown-icon">
                     <img src="images/about.png" alt="login">
                 </div>
@@ -34,7 +34,7 @@
             </span>
         </div>
         <div class="mobile-contact">
-            <span onclick="transitionToPage('contact.html')">
+            <span onclick="transitionToPage('contact')">
                 <div class="dropdown-icon">
                     <img src="images/contact.png" alt="contact">
                 </div>
