--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="main-content index-main">
         <div class="card">
-            <span onclick="transitionToPage('mean_rank.html')">
+            <span onclick="transitionToPage('mean_rank')">
                 <div class="card-title">
                     Κατάταξη ανά Μέσο Όρο
                 </div>
@@ -66,7 +66,7 @@
             </span>
         </div>
         <div class="card">
-            <span onclick="transitionToPage('rank_by_lesson.html')">
+            <span onclick="transitionToPage('rank_by_lesson')">
                 <div class="card-title">
                     Κατάταξη ανά Μάθημα
                 </div>
@@ -78,7 +78,7 @@
             </span>
         </div>
         <div class="card">
-            <span onclick="transitionToPage('minmax.html')">
+            <span onclick="transitionToPage('minmax')">
                 <div class="card-title">
                     Μέγιστα, Ελάχιστα και Μέσοι ΄Όροι Μάθηματων
                 </div>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="card">
-            <span onclick="transitionToPage('curved.html')">
+            <span onclick="transitionToPage('curved')">
                 <div class="card-title">
                     Αναγωγή
                 </div>
