Add h1 element in header (for SEO)

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
             </span>
         </div>
         <div class="main-title">
-            Στατιστικά Παγκυπρίων Εξετάσεων
+           <h1> Στατιστικά Παγκυπρίων Εξετάσεων </h1>
         </div>
         <div class="dropdown-related header-dropdown">
             <div class="dropdown-related header-dropdown-button">
