Change alt text on images for SEO

--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <div class="header-top dropdown-related">
         <div class="header-left">
             <span onclick="transitionToPage('index')">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="pagkypries logo">
             </span>
         </div>
         <div class="main-title">
@@ -10,7 +10,7 @@
         </div>
         <div class="dropdown-related header-dropdown">
             <div class="dropdown-related header-dropdown-button">
-                <img class="dropdown-related" src="images/menu.png" alt="menu">
+                <img class="dropdown-related" src="images/menu.png" alt="pagkypries menu">
             </div>
         </div>
     </div>
@@ -20,7 +20,7 @@
         <div class="mobile-home">
             <span onclick="transitionToPage('index')">
                 <div class="dropdown-icon">
-                    <img src="images/home.png" alt="home">
+                    <img src="images/home.png" alt="pagkypries logo">
                 </div>
                <div class="dropdown-text"> Αρχική Σελίδα </div>
             </span>
@@ -28,7 +28,7 @@
         <div class="mobile-about">     
             <span onclick="transitionToPage('about')">
                 <div class="dropdown-icon">
-                    <img src="images/about.png" alt="login">
+                    <img src="images/about.png" alt="pagkypries about">
                 </div>
                 <div class="dropdown-text"> Σχετικά </div>
             </span>
@@ -36,7 +36,7 @@
         <div class="mobile-contact">
             <span onclick="transitionToPage('contact')">
                 <div class="dropdown-icon">
-                    <img src="images/contact.png" alt="contact">
+                    <img src="images/contact.png" alt="pagkypries contact">
                 </div>
                 <div class="dropdown-text"> Επικοινωνήστε μαζί μας </div>
             </span>
