--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
         });
     </script>
     <script src="javascript/page_transition.js" defer></script>
+    <script src="javascript/dropdown.js" async defer></script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
