change links on main page

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
 
         <div class="card">
-            <span onclick="transitionToPage('curved')">
+            <span onclick="transitionToPage('cyprus_curved')">
                 <div class="card-title">
-                    Αναγωγή
+                    Εκτιμώμενη Αναγωγή ανά Πλαίσιο Πρόβασης για ΑΑΕΙ Κύπρου
                 </div>
                 <div class="card-content">
                     Μπλα μπλα μπλα μπλα μπλα
@@ -101,14 +101,15 @@
         </div>
         
         <div class="card">
-            <a href="#">
+            <span onclick="transitionToPage('bases')">
+
                 <div class="card-title">
-                    Μπλα μπλα
+                    Βάσεις Πρόσβασεις ΑΑΕΙ Κύπρου
                 </div>
                 <div class="card-content">
                     Μπλα μπλα μπλα μπλα μπλα
                 </div>
-            </a>
+            </span>
         </div>
     </div>
 
