generalize selector styles

--- a/cyprus_curved.html
+++ b/cyprus_curved.html
@@ -92,7 +92,7 @@
             <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
         </div>
         
-        <div id="plaisio-filter">
+        <div id="plaisio-filter" class="selector-filter">
             Επιλέξτε πλάισιο πρόσβασης:
             <select id="plaisio-selector" onchange="initialize_table()"></select>
         </div>
