--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -67,7 +67,7 @@
                 <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
             </div>
             
-            <div id="lesson-filter">
+            <div id="lesson-filter" class="selector-filter">
                 Επιλέξτε μάθημα:
                 <select id="lesson-selector" onchange="change_lesson()"></select>
             </div>
