--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <span onclick="transitionToPage('bases')">
 
                 <div class="card-title">
-                    Βάσεις Πρόσβασεις ΑΑΕΙ Κύπρου
+                    Βάσεις Πρόσβασης ΑΑΕΙ Κύπρου
                 </div>
                 <div class="card-content">
                     Μπλα μπλα μπλα μπλα μπλα
