feat: add year selection menu

--- a/header.html
+++ b/header.html
@@ -17,6 +17,19 @@
 
 
     <div class="header-dropdown-content dropdown-related">
+        <div id="year_menu" class="dropdown-related">
+            <div  class="dropdown-related year_div 2019" onclick="set_year(2019)">2019</div>
+            <div  class="dropdown-related year_div 2020" onclick="set_year(2020)">2020</div>
+            <div  class="dropdown-related year_div 2021" onclick="set_year(2021)">2021</div>
+            <div  class="dropdown-related year_div 2022" onclick="set_year(2022)">2022</div>
+        </div>
+
+        <div id="year_indicator">
+
+        </div>
+
+        <script src="javascript/year_choice.js"></script>
+        <script src="javascript/initialize_pages.js"></script>
         <div class="mobile-home">
             <span onclick="transitionToPage('index')">
                 <div class="dropdown-icon">
