--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -41,7 +41,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script type="module" src="javascript/parse_lessons_json.js"></script>
+    
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/lessons_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
@@ -69,7 +69,7 @@
             
             <div id="lesson-filter" class="selector-filter">
                 Επιλέξτε μάθημα:
-                <select id="lesson-selector" onchange="change_lesson()"></select>
+                <select id="lesson-selector" onchange="rank_by_lesson();"></select>
             </div>
 
         </div>
