bug fix: wrong function call

--- a/cyprus_curved.html
+++ b/cyprus_curved.html
@@ -43,7 +43,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script type="module" src="javascript/parse_lessons_json.js"></script>
+    
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/curve_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
@@ -94,7 +94,7 @@
         
         <div id="plaisio-filter" class="selector-filter">
             Επιλέξτε πλάισιο πρόσβασης:
-            <select id="plaisio-selector" onchange="initialize_table()"></select>
+            <select id="plaisio-selector" onchange="initialize_page()"></select>
         </div>
 
         <div id="table">
