Use datatables for table display

--- a/mean_rank.html
+++ b/mean_rank.html
@@ -34,6 +34,7 @@
     <!--- JS --->
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
     <script>
         $(function(){
           $("#header").load("header.html");
@@ -43,7 +44,6 @@
     <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/mean_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
-    <script src="javascript/filter.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
@@ -64,9 +64,18 @@
             <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
         </div>
 
-        <div id="table">
-
-        </div>
+        <table id="table" class="display">
+            <thead>
+                <tr>
+                    <th> Κωδικός Υποψηφίου</th>
+                    <th> Κατάταξη </th>
+                    <th> Μέσος Όρος </th>
+                </tr>
+            </thead>
+            <tbody>
+                
+            </tbody>
+        </table>
     </div>
 
 
