--- a/mean_rank.html
+++ b/mean_rank.html
@@ -34,7 +34,8 @@
     <!--- JS --->
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
+    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll@^3.0.0-beta.6/dist/infinite-ajax-scroll.min.js"></script>
+
     <script>
         $(function(){
           $("#header").load("header.html");
@@ -72,10 +73,14 @@
                     <th> Μέσος Όρος </th>
                 </tr>
             </thead>
+
             <tbody>
-                
+
             </tbody>
         </table>
+
+        <div class="container"></div>
+
     </div>
 
 
