--- a/mean_rank.html
+++ b/mean_rank.html
@@ -42,11 +42,11 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script src="javascript/populate_table.js" defer></script>
     <script src="javascript/mean_table.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
+    <script src="javascript/data_handler.js" defer></script>
 
     <title> Μέσοι Όροι | Παγκύπριες Εξετάσεις </title>
 </head>
