--- a/mean_rank.html
+++ b/mean_rank.html
@@ -42,7 +42,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script src="javascript/mean_table.js" defer></script>
+    <script src="javascript/mean.js" defer></script>
     <script src="javascript/filter.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
