fix bug that generates extra entries with scrolling

--- a/mean_rank.html
+++ b/mean_rank.html
@@ -77,12 +77,10 @@
                 </tr>
             </thead>
 
-            <tbody>
+            <tbody id="table-body">
 
             </tbody>
         </table>
-
-        <div class="container"></div>
 
     </div>
 
