--- a/cyprus_curved.html
+++ b/cyprus_curved.html
@@ -88,18 +88,29 @@
 
     <div class="main-content">
         <div id="filter-input">
-            Εισάγετε τον αριθμό υποψηφίου στο πλαίσιο: 
-            <input class="numbersOnly" id="filter-input-text" placeholder="Αναζήτηση...">
+            <div>Εισάγετε τον αριθμό υποψηφίου στο πλαίσιο: <br>
+            <div class="small-text"> (Αφήστε άδειο για να εμφανιστούν όλοι)</div></div>
+            <input class="numbersOnly" id="filter-input-text" placeholder="Αριθμός Υποψηφίου...">
+            <button id="filter-input-button"> Αναζήτηση </button>
         </div>
-        
         <div id="plaisio-filter" class="selector-filter">
             Επιλέξτε πλάισιο πρόσβασης:
             <select id="plaisio-selector" onchange="initialize_page()"></select>
         </div>
 
-        <div id="table">
+        <table id="table" class="display">
+            <thead>
+                <tr>
+                    <th> Κωδικός Υποψηφίου</th>
+                    <th> Κατάταξη </th>
+                    <th> Μέσος Όρος </th>
+                </tr>
+            </thead>
 
-        </div>
+            <tbody id="table-body">
+
+            </tbody>
+        </table>
     </div>
 
 
