fix table header

--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -84,7 +84,7 @@
                 <tr>
                     <th> Κωδικός Υποψηφίου</th>
                     <th> Κατάταξη </th>
-                    <th> Μέσος Όρος </th>
+                    <th> Βαθμός </th>
                 </tr>
             </thead>
 
