--- a/minmax.html
+++ b/minmax.html
@@ -35,17 +35,18 @@
     <!--- JS --->
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll@^3.0.0-beta.6/dist/infinite-ajax-scroll.min.js"></script>
+    
     <script>
         $(function(){
           $("#header").load("header.html");
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script type="module" src="javascript/parse_raw_json.js"></script>
-    <script src="javascript/populate_table.js" defer></script>
-    <script src="javascript/minmax_table.js" defer></script>
+    
+    <script src="javascript/minmax.js" defer></script>
+    <script src="javascript/data_handler.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
-    <script src="javascript/filter.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
@@ -61,9 +62,20 @@
 
     <div class="main-content">
 
-        <div id="table">
+        <table id="table" class="display">
+            <thead>
+                <tr>
+                    <th> Μάθημα</th>
+                    <th> Ελάχιστη Βαθμολογία </th>
+                    <th> Μέγιστη Βαθμολογία </th>
+                    <th> Μέσος Όρος </th>
+                </tr>
+            </thead>
 
-        </div>
+            <tbody id="table-body">
+
+            </tbody>
+        </table>
     </div>
 
 
