--- a/bases.html
+++ b/bases.html
@@ -34,15 +34,15 @@
     <!--- JS --->
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    
     <script>
         $(function(){
           $("#header").load("header.html");
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script type="module" src="javascript/parse_raw_json.js"></script>
-    <script src="javascript/populate_table.js" defer></script>
-    <script src="javascript/bases_table.js" defer></script>
+    
+    <script src="javascript/bases.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
@@ -58,9 +58,18 @@
     <div id="header"> </div>
 
     <div class="main-content">
-        <div id="table">
+        <table id="table" class="display">
+            <thead>
+                <tr>
+                    <th> Σχολή Επιτυχίας </th>
+                    <th> Ελάχιστη Βαθμολογία </th>
+                </tr>
+            </thead>
 
-        </div>
+            <tbody id="table-body">
+
+            </tbody>
+        </table>
     </div>
 
 
