add year label on header

--- a/header.html
+++ b/header.html
@@ -8,6 +8,9 @@
         <div class="main-title">
            <h1> Στατιστικά Παγκυπρίων Εξετάσεων </h1>
         </div>
+        <div id="year-label">
+            <h2></h2>
+        </div>
         <div class="dropdown-related header-dropdown">
             <div class="dropdown-related header-dropdown-button">
                 <img class="dropdown-related" src="images/menu.png" alt="pagkypries menu">
