edit card information

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="card">
             <span onclick="transitionToPage('minmax')">
                 <div class="card-title">
-                    Μέγιστα, Ελάχιστα και Μέσοι ΄Όροι Μάθηματων
+                    Μέγιστα, Ελάχιστα και Μέσοι Όροι Μάθηματων
                 </div>
                 <div class="card-content">
                     Μέγιστες και Ελάχιστες Βαθμολογίες και Μέσος Όρος Μάθηματων.
@@ -99,7 +99,8 @@
                     Εκτιμώμενη Αναγωγή ανά Πλαίσιο Πρόβασης για ΑΑΕΙ Κύπρου
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα μπλα μπλα
+                    Οι υποψήφιοι σε κάθε πλαίσιο κατατάσσονται με βάση εκτίμιση της αναγωγής
+                    όπως προβλέπεται από τον οδηγό εξετάσεων.
                 </div>
             </span>
         </div>
@@ -111,7 +112,9 @@
                     Βάσεις Πρόσβασης ΑΑΕΙ Κύπρου
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα μπλα μπλα
+                    Παρουσίαση ελάχιστης βαθμολογίας (με αναγωγή) για πρόσβαση
+                    σε στρατιωτικές σχολές και ΑΑΕΙ Κύπρου, για την επιλεγμένη
+                    χρονιά.
                 </div>
             </span>
         </div>
