use headings for card titles

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="card">
             <span onclick="transitionToPage('mean_rank')">
                 <div class="card-title">
-                    Κατάταξη ανά Μέσο Όρο
+                    <h3>Κατάταξη ανά Μέσο Όρο<h3>
                 </div>
                 <div class="card-content">
                     Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των εξετάσεων τους.
@@ -73,7 +73,7 @@
         <div class="card">
             <span onclick="transitionToPage('rank_by_lesson')">
                 <div class="card-title">
-                    Κατάταξη ανά Μάθημα
+                    <h3>Κατάταξη ανά Μάθημα</h3>
                 </div>
                 <div class="card-content">
                     Οι υποψήφιοι κατατάσσονται με βάση τον βαθμό τους σε επιλεγμένο μάθημα.
@@ -85,7 +85,7 @@
         <div class="card">
             <span onclick="transitionToPage('minmax')">
                 <div class="card-title">
-                    Μέγιστα, Ελάχιστα και Μέσοι Όροι Μάθηματων
+                    <h3>Μέγιστα, Ελάχιστα και Μέσοι Όροι Μάθηματων</h3>
                 </div>
                 <div class="card-content">
                     Μέγιστες και Ελάχιστες Βαθμολογίες και Μέσος Όρος Μάθηματων.
@@ -96,7 +96,7 @@
         <div class="card">
             <span onclick="transitionToPage('cyprus_curved')">
                 <div class="card-title">
-                    Εκτιμώμενη Αναγωγή ανά Πλαίσιο Πρόβασης για ΑΑΕΙ Κύπρου
+                    <h3>Εκτιμώμενη Αναγωγή ανά Πλαίσιο Πρόβασης για ΑΑΕΙ Κύπρου</h3>
                 </div>
                 <div class="card-content">
                     Οι υποψήφιοι σε κάθε πλαίσιο κατατάσσονται με βάση εκτίμιση της αναγωγής
@@ -109,7 +109,7 @@
             <span onclick="transitionToPage('bases')">
 
                 <div class="card-title">
-                    Βάσεις Πρόσβασης ΑΑΕΙ Κύπρου
+                    <h3>Βάσεις Πρόσβασης ΑΑΕΙ Κύπρου</h3>
                 </div>
                 <div class="card-content">
                     Παρουσίαση ελάχιστης βαθμολογίας (με αναγωγή) για πρόσβαση
