--- a/forum.html
+++ b/forum.html
@@ -54,19 +54,8 @@
 
     <div id="main-content">
         <div id="left-divider">
-            <div id="forum-post-form">
-                Δημοσιεύστε ένα σχόλιο στο forum
-                <div>
-                    <input type="text" id="forum-post-title" name="forum-post-title" placeholder="Τίτλος" required>
-                </div>
-
-                <div>
-                    <textarea id="forum-post-body" name="forum-post-content" placeholder="Σχόλιο" required></textarea>
-                </div>
-
-                <div>
-                    <button id="forum-post-submit" type="submit">Υποβολή</button>
-                </div>
+            <div id="forum-post-button">
+                <button id="forum-post-button">Πατήστε εδώ για να δημοσιεύσετε!</button>
             </div>
             
             <div id="forum-posts">
@@ -82,6 +71,20 @@
                 </div>
                 <div id="chosen-post-body">
                     Σχόλιο
+                </div>
+            </div>
+
+            <div id="forum-post-form">
+                <div>
+                    <input type="text" id="forum-post-title" name="forum-post-title" placeholder="Τίτλος" required>
+                </div>
+
+                <div>
+                    <textarea id="forum-post-body" name="forum-post-content" placeholder="Σχόλιο" required></textarea>
+                </div>
+
+                <div>
+                    <button id="forum-post-submit" type="submit">Υποβολή</button>
                 </div>
             </div>
         </div>
