add forum link to header

--- a/header.html
+++ b/header.html
@@ -50,11 +50,11 @@
             </span>
         </div>
         <div class="mobile-contact">
-            <span onclick="transitionToPage('contact')">
+            <span onclick="transitionToPage('forum')">
                 <div class="dropdown-icon">
                     <img src="images/contact.png" alt="pagkypries contact">
                 </div>
-                <div class="dropdown-text"> Επικοινωνήστε μαζί μας </div>
+                <div class="dropdown-text"> Χώρος συζητήσεων </div>
             </span>
         </div>
     </div>
