Style post and comment cards

--- a/forum.html
+++ b/forum.html
@@ -66,7 +66,7 @@
         <div id="right-divider">
             <div id="forum-post-view">
                 <div id="chosen-post-title"> </div>
-                <div id="chosen-post-body"> </div>
+                <div id="chosen-post-box"> </div>
 
                 <div id="comment-button-line">
                     <h4> Σχόλια </h4>
