change forum icon

--- a/header.html
+++ b/header.html
@@ -52,7 +52,7 @@
         <div class="mobile-contact">
             <span onclick="transitionToPage('forum')">
                 <div class="dropdown-icon">
-                    <img src="images/contact.png" alt="pagkypries contact">
+                    <img src="images/forum.png" alt="pagkypries contact">
                 </div>
                 <div class="dropdown-text"> Χώρος συζητήσεων </div>
             </span>
